# CMOE

./: README.md  pyproject.toml
cmoe_from_scratch/: __init__.py  config.py  experts.py  layers.py  router.py  trainer.py  utils.py
configs/: default.yaml
experiments/: benchmark.py  expert_ablation.py  routing_analysis.py  train_gpt2_cmoe.py
results/: benchmark_results.json
scripts/: run_experiment.sh
