[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmoe-from-scratch"
version = "1.0.0"
description = "Conditional Mixture of Experts (CMoE) implemented from first principles for sparse, compute-efficient transformer architectures"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Harsh Raj Singh"},
]
keywords = ["mixture-of-experts", "sparse-models", "conditional-computation", "transformers", "gpt2", "routing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools.packages.find]
include = ["cmoe_from_scratch*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py39"
